[package]
name          = "avocado"
version       = "0.0.1" # remember to update version in lib.rs too!
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/avocado.git"
homepage      = "https://h2co3.github.io/avocado/"
license       = "MIT"
readme        = "README.md"
documentation = "https://docs.rs/avocado"
description   = "Avocado, the strongly-typed MongoDB driver"
keywords      = ["database", "mongodb", "json", "nosql", "driver"]
categories    = ["database", "database-implementations", "development-tools", "api-bindings", "web-programming"]

[dependencies]
mongodb         = "0.3.10"
bson            = "0.12.3"
serde           = "1.0"
serde_derive    = "1.0"
magnet_schema   = "0.3.2"
backtrace       = "0.3.9"
bitflags        = "1.0.3"
linked-hash-map = { version = "0.5.1", features = ["serde_impl"] }

[dev-dependencies]
serde_json      = "1.0"
