[package]
name          = "avocado"
version       = "0.0.5" # remember to update version in lib.rs too!
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/avocado.git"
homepage      = "https://h2co3.github.io/avocado/"
license       = "MIT"
readme        = "README.md"
documentation = "https://docs.rs/avocado"
description   = "Avocado, the strongly-typed MongoDB driver"
keywords      = ["database", "mongodb", "json", "nosql", "driver"]
categories    = ["database", "database-implementations", "development-tools", "api-bindings", "web-programming"]

[dependencies]
mongodb         = "0.3.12"
bson            = { version = "0.13.0", features = ["u2i"] }
serde           = "1.0"
serde_derive    = "1.0"
serde_json      = { version = "1.0", features = ["preserve_order"] }
backtrace       = "0.3.13"
bitflags        = "1.0.4"
magnet_schema   = { version = "0.5.0", optional = true }

[dev-dependencies]
magnet_derive   = "0.5.0"

[features]
schema_validation = ["magnet_schema"]
