[package]
name          = "avocado_derive"
version       = "0.5.0" # remember to update version in lib.rs too!
edition       = "2018"
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/avocado.git"
homepage      = "https://h2co3.github.io/avocado/"
license       = "MIT"
readme        = "../README.md"
documentation = "https://docs.rs/avocado_derive"
description   = "Avocado, the strongly-typed MongoDB driver"
keywords      = ["database", "mongodb", "json", "nosql", "driver"]
categories    = ["database", "database-implementations", "development-tools", "api-bindings", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.26"
quote       = "0.6.11"
syn         = { version = "0.14.9", features = ["extra-traits"] }
